--- a/Aula-7/helloangular/package.json
+++ b/Aula-7/helloangular/package.json
@@ -17,6 +17,7 @@
   "author": "raphael4ndrade",
   "license": "MIT",
   "dependencies": {
+    "angular-chart.js": "^1.1.1",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "knex": "^0.12.6",
